@@ -1,4 +1,4 @@
-/* $Id: proto.h,v 1.59 2002/11/22 15:43:14 ukai Exp $ */
+/* $Id: proto.h,v 1.60 2002/11/22 15:49:44 ukai Exp $ */
 /* 
  *   This file was automatically generated by version 1.7 of cextract.
  *   Manual editing not recommended.
@@ -560,6 +560,7 @@ extern char *last_modified(Buffer *buf);
 extern Str romanNumeral(int n);
 extern Str romanAlphabet(int n);
 extern void reset_signals(void);
+extern void myExec(char *command);
 extern void mySystem(char *command, int background);
 extern Str myExtCommand(char *cmd, char *arg, int redirect);
 extern Str myEditor(char *cmd, char *file, int line);
